--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI="mongodb+srv://sualehkhalifa:1234shah@cluster0.e0jwpze.mongodb.net/"
+MONGO_URI="mongodb+srv://sualehkhalifa:1234shah@cluster0.l3zroqk.mongodb.net/"
